fix: NaN stats, navbar overflow 1280px, Surface Duo layout, unify floating buttons

--- a/styles-new.css
+++ b/styles-new.css
@@ -230,7 +230,5 @@ html[data-theme="dark"] footer {
         width: 45px;
         height: 45px;
         font-size: 1rem;
-        bottom: 90px;
-        right: 20px;
     }
 }
